src/test/ui/const-generics/const_evaluatable_checked/simple_fail.full.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/simple_fail.rs:6:33
   |
LL | type Arr<const N: usize> = [u8; N - 1];
   |                                 ^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
